overflow grid view and list view fixed

--- a/src/Global.css
+++ b/src/Global.css
@@ -739,6 +739,10 @@ span.wallet {
     margin-bottom: 24px;
 }
 
+.nftViewBtn{
+    margin: 0 5px;
+}
+
 .reloadNfts {
     background: rgba(98, 113, 138, 0.1);
     box-shadow: 0px 1px 9px rgba(55, 63, 92, 0.12);
